发电机俯视图、主视图、后视图点点布局

--- a/src/app/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard.component.html
@@ -7,28 +7,232 @@
           <div class="flex-container-right">
             <div class="my-container">
               <div class="font-view" style="padding:10px;border:1px solid #000; height:300px;margin: 0 4px;">
-                <ul class="planForm-title">
-                  <li>
-                    <h4>发电机俯视图</h4>
-                  </li>
-                  <li>
-                    <h4>发电机主视图</h4>
-                  </li>
-                  <li>
-                    <h4>发电机后视图</h4>
-                  </li>
-                </ul>
                 <ul class="planform-container">
                   <li class="planform-list">
+                    <h4>发电机俯视图</h4>
                     <div class="planForm-bg1">
+                      <div class="planForm-temp" style="margin-left:56px;padding-top:25px;">
+                        <h6 class="cubicText">B列气缸排温</h6>
+                        <ul class="cubicOperation">
+                          <li class="cubicOperation-num">
+                            <ul class="cubicNum">
+                              <li><span>1</span></li>
+                              <li><span>2</span></li>
+                              <li><span>3</span></li>
+                              <li><span>4</span></li>
+                              <li><span>5</span></li>
+                              <li><span>6</span></li>
+                            </ul>
+                          </li>
+                          <li class="cubicOperation-circle">
+                            <ul>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                            </ul>
+                          </li>
+                          <li class="cubicOperation-num">
+                            <ul class="cubicNum" style="display:none;">
+                              <li><span>1</span></li>
+                              <li><span>2</span></li>
+                              <li><span>3</span></li>
+                              <li><span>4</span></li>
+                              <li><span>5</span></li>
+                              <li><span>6</span></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
 
+                      <div class="planForm-temp" style="padding-top: 55px;margin-left: 60px;">
+                        <h6 class="cubicText">A列气缸排温</h6>
+                        <ul class="cubicOperation">
+                          <li class="cubicOperation-num">
+                            <ul class="cubicNum" style="display:none;">
+                              <li><span>1</span></li>
+                              <li><span>2</span></li>
+                              <li><span>3</span></li>
+                              <li><span>4</span></li>
+                              <li><span>5</span></li>
+                              <li><span>6</span></li>
+                            </ul>
+                          </li>
+                          <li class="cubicOperation-circle">
+                            <ul>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                            </ul>
+                          </li>
+                          <li class="cubicOperation-num">
+                            <ul class="cubicNum">
+                              <li><span>1</span></li>
+                              <li><span>2</span></li>
+                              <li><span>3</span></li>
+                              <li><span>4</span></li>
+                              <li><span>5</span></li>
+                              <li><span>6</span></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
                     </div>
                   </li>
                   <li class="planform-list">
-                    <div class="planForm-bg2"></div>
+                    <h4>发电机主视图</h4>
+                    <div class="planForm-bg2">
+                      <div class="planForm-temp" style="padding-top: 10px;margin-left: 58px;">
+                        <h6 class="cubicText">1号温度</h6>
+                        <ul class="cubicOperation">
+                          <li class="cubicOperation-num">
+                            <ul class="cubicNum">
+                              <li><span>1</span></li>
+                              <li><span>2</span></li>
+                              <li><span>3</span></li>
+                              <li><span>4</span></li>
+                              <li><span>5</span></li>
+                              <li><span>6</span></li>
+                            </ul>
+                          </li>
+                          <li class="cubicOperation-circle">
+                            <ul>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                            </ul>
+                          </li>
+                          <li class="cubicOperation-num">
+                            <ul class="cubicNum" style="display:none;">
+                              <li><span>1</span></li>
+                              <li><span>2</span></li>
+                              <li><span>3</span></li>
+                              <li><span>4</span></li>
+                              <li><span>5</span></li>
+                              <li><span>6</span></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
+                      <div class="planForm-temp" style="padding-top: 30px;margin-left: 58px;">
+                        <h6 class="cubicText">2号温度</h6>
+                        <ul class="cubicOperation">
+                          <li class="cubicOperation-num">
+                            <ul class="cubicNum" style="display:none;">
+                              <li><span>1</span></li>
+                              <li><span>2</span></li>
+                              <li><span>3</span></li>
+                              <li><span>4</span></li>
+                              <li><span>5</span></li>
+                              <li><span>6</span></li>
+                            </ul>
+                          </li>
+                          <li class="cubicOperation-circle">
+                            <ul>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                            </ul>
+                          </li>
+                          <li class="cubicOperation-num" style="display:none;">
+                            <ul class="cubicNum">
+                              <li><span>1</span></li>
+                              <li><span>2</span></li>
+                              <li><span>3</span></li>
+                              <li><span>4</span></li>
+                              <li><span>5</span></li>
+                              <li><span>6</span></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
                   </li>
                   <li class="planform-list">
-                    <div class="planForm-bg3"></div>
+                    <h4>发电机后视图</h4>
+                    <div class="planForm-bg3">
+                      <div class="planForm-temp" style="padding-top: 10px;margin-left: -62px;">
+                        <h6 class="cubicText">1号温度</h6>
+                        <ul class="cubicOperation">
+                          <li class="cubicOperation-num">
+                            <ul class="cubicNum">
+                              <li><span>1</span></li>
+                              <li><span>2</span></li>
+                              <li><span>3</span></li>
+                              <li><span>4</span></li>
+                              <li><span>5</span></li>
+                              <li><span>6</span></li>
+                            </ul>
+                          </li>
+                          <li class="cubicOperation-circle">
+                            <ul>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                            </ul>
+                          </li>
+                          <li class="cubicOperation-num">
+                            <ul class="cubicNum" style="display:none;">
+                              <li><span>1</span></li>
+                              <li><span>2</span></li>
+                              <li><span>3</span></li>
+                              <li><span>4</span></li>
+                              <li><span>5</span></li>
+                              <li><span>6</span></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
+                      <div class="planForm-temp" style="padding-top: 32px;margin-left: -58px;">
+                        <h6 class="cubicText">2号温度</h6>
+                        <ul class="cubicOperation">
+                          <li class="cubicOperation-num">
+                            <ul class="cubicNum" style="display:none;">
+                              <li><span>1</span></li>
+                              <li><span>2</span></li>
+                              <li><span>3</span></li>
+                              <li><span>4</span></li>
+                              <li><span>5</span></li>
+                              <li><span>6</span></li>
+                            </ul>
+                          </li>
+                          <li class="cubicOperation-circle">
+                            <ul>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                              <li><span></span></li>
+                            </ul>
+                          </li>
+                          <li class="cubicOperation-num">
+                            <ul class="cubicNum" style="display:none;">
+                              <li><span>1</span></li>
+                              <li><span>2</span></li>
+                              <li><span>3</span></li>
+                              <li><span>4</span></li>
+                              <li><span>5</span></li>
+                              <li><span>6</span></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
                   </li>
                 </ul>
               </div>
