--- a/src/app/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard.component.html
@@ -33,71 +33,15 @@
                 </ul>
               </div>
               <div style="display:flex;flex-wrap: wrap;">
-                <div class="">
+                <div class="" *ngFor="let data of mockData.devices">
                   <h4 style="color:#7a7a7a;padding-left: 20px;margin-top: 16px;">A1缸气缸排温</h4>
                   <ul style="display:flex;flex-wrap: wrap;border: 1px solid #535456;">
-                    <li *ngFor="let item of list;let i = index">
-                      <div class="bar-box" (click)="addActive(i)" [ngClass]="initIndex === i ? 'active' : ''">
-                        <h4>{{item.name}}</h4>
-                        <h4>{{item.unit}}{{i}}</h4>
-                        <div class="bar">
-                          <span class="bar-status bar-status-danger-bg bar-status-danger"></span>
-                          <span class="bar-status bar-status-warn-bg bar-status-warn"></span>
-                          <span class="bar-status bar-status-normal-bg bar-status-normal"></span>
-                          <span class="bar-status bar-status-warn-bg bar-status-warn"></span>
-                          <span class="bar-status bar-status-danger-bg bar-status-danger"></span>
-                          <div class="bar-analog-icon" [ngStyle]="fnReturnState(item.analog).style"></div>
-                          <div class="bar-mark bar-mark-danger">0.8</div>
-                          <div class="bar-mark bar-mark-warn">24.3</div>
-                          <div class="bar-mark bar-mark-normal">57.2</div>
-                          <div class="bar-mark bar-mark-error">80.8</div>
-                          <div class="bar-analog-value bar-status-{{fnReturnState(item.analog).state}}-color"
-                            [ngStyle]="fnReturnState(item.analog).style">{{item.analog}}</div>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="bar-box" (click)="addActive(-2)" [ngClass]="initIndex === -2 ? 'active' : ''">
-                        <h4>A1缸气缸排温</h4>
-                        <h4>（℃）</h4>
-                        <div class="bar">
-                          <span class="bar-status bar-status-danger bar-status-unnormal"></span>
-                          <span class="bar-status bar-status-warn bar-status-unnormal"></span>
-                          <span class="bar-status bar-status-normal bar-status-unnormal"></span>
-                          <span class="bar-status bar-status-warn bar-status-unnormal"></span>
-                          <span class="bar-status bar-status-danger"></span>
-                          <div class="bar-analog-icon"></div>
-                          <div class="bar-analog-value">11</div>
-                        </div>
-                      </div>
+                    <li *ngFor="let item of data.properties;let i = index">
+                      <app-bar [item]='item'></app-bar>
                     </li>
                   </ul>
                 </div>
-                <div class="">
-                  <h4 style="color:#7a7a7a;padding-left: 20px;margin-top: 16px;">A2缸气缸排温</h4>
-                  <ul style="display:flex;flex-wrap: wrap;border: 1px solid #535456;">
-                    <li *ngFor="let item of list2;let i = index">
-                      <div class="bar-box" (click)="addActive2(i)" [ngClass]="initIndex2 === i ? 'active' : ''">
-                        <h4>{{item.name}}</h4>
-                        <h4>{{item.unit}}{{i}}</h4>
-                        <div class="bar">
-                          <span class="bar-status bar-status-danger-bg bar-status-danger"></span>
-                          <span class="bar-status bar-status-warn-bg bar-status-warn"></span>
-                          <span class="bar-status bar-status-normal-bg bar-status-normal"></span>
-                          <span class="bar-status bar-status-warn-bg bar-status-warn"></span>
-                          <span class="bar-status bar-status-danger-bg bar-status-danger"></span>
-                          <div class="bar-analog-icon" [ngStyle]="fnReturnState(item.analog).style"></div>
-                          <div class="bar-mark bar-mark-danger">0.8</div>
-                          <div class="bar-mark bar-mark-warn">24.3</div>
-                          <div class="bar-mark bar-mark-normal">57.2</div>
-                          <div class="bar-mark bar-mark-error">80.8</div>
-                          <div class="bar-analog-value bar-status-{{fnReturnState(item.analog).state}}-color"
-                            [ngStyle]="fnReturnState(item.analog).style">{{item.analog}}</div>
-                        </div>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
+                
                 <div class="">
                   <h4 style="color:#7a7a7a;padding-left: 20px;margin-top: 16px;">B2缸气缸排温</h4>
                   <ul style="display:flex;flex-wrap: wrap;border: 1px solid #535456;">
