发电机俯视图、主视图、后视图点点布局修改

--- a/src/app/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard.component.html
@@ -7,9 +7,19 @@
           <div class="flex-container-right">
             <div class="my-container">
               <div class="font-view" style="padding:10px;border:1px solid #000; height:300px;margin: 0 4px;">
+                <ul class="planform-title">
+                  <li>
+                    <h4>发电机俯视图</h4>
+                  </li>
+                  <li>
+                    <h4>发电机主视图</h4>
+                  </li>
+                  <li>
+                    <h4>发电机后视图</h4>
+                  </li>
+                </ul>
                 <ul class="planform-container">
                   <li class="planform-list">
-                    <h4>发电机俯视图</h4>
                     <div class="planForm-bg1">
                       <div class="planForm-temp" style="margin-left:56px;padding-top:25px;">
                         <h6 class="cubicText">B列气缸排温</h6>
@@ -85,7 +95,6 @@
                     </div>
                   </li>
                   <li class="planform-list">
-                    <h4>发电机主视图</h4>
                     <div class="planForm-bg2">
                       <div class="planForm-temp" style="padding-top: 10px;margin-left: 58px;">
                         <h6 class="cubicText">1号温度</h6>
@@ -160,7 +169,6 @@
                     </div>
                   </li>
                   <li class="planform-list">
-                    <h4>发电机后视图</h4>
                     <div class="planForm-bg3">
                       <div class="planForm-temp" style="padding-top: 10px;margin-left: -62px;">
                         <h6 class="cubicText">1号温度</h6>
