--- a/src/app/routes/dashboard/dashboard.component.less
+++ b/src/app/routes/dashboard/dashboard.component.less
@@ -193,6 +193,23 @@ body {
 
 .font-view {
 
+  .planform-title{
+    width:100%;
+    display:flex;
+    justify-content: space-around;
+
+    li{
+      width:32%;
+      box-sizing:border-box;
+      border-bottom:1px solid #535456;
+
+      h4 {
+        color:#bcbcbc;
+        font-size:16px;
+      }
+    }
+  }
+
   .planform-container{
     width:100%;
     display:flex;
@@ -202,13 +219,6 @@ body {
       width:32%;
       height:200px;
       box-sizing:border-box;
-
-      h4 {
-        color:#bcbcbc;
-        font-size:16px;
-        padding-bottom:6px;
-        border-bottom:1px solid #535456;
-      }
 
       .planForm-bg1{
         width:100%;
