header用户信息加线

--- a/src/app/layout/default/header/header.component.html
+++ b/src/app/layout/default/header/header.component.html
@@ -7,7 +7,7 @@
 </div>
 <div class="alain-default__nav-wrap">
   <ul class="alain-default__nav navList">
-    <li>
+    <li style="border-right:1px solid #6b6b6b;">
       <span>报告</span>
       <i nz-icon type="down" theme="outline" style="font-size:12px;"></i>
     </li>
